--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tauri-app-with-fe"
+name = "tauri-desktop-app"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Tauri Desktop App"
 authors = ["you"]
 edition = "2021"
 
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "tauri_app_with_fe_lib"
+name = "tauri_app"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
@@ -19,6 +19,7 @@ ts-rs = "10.1.0"
 tauri-build = { version = "^2", features = [] }
 
 [dependencies]
+platform_core = { path = "../platform_core" }
 ts-rs = "10.1.0"
 tauri = { version = "2.3.1", features = [] }
 tauri-plugin-opener = "^2"
