--- a/platform_core/Cargo.toml
+++ b/platform_core/Cargo.toml
@@ -7,12 +7,10 @@ edition = "2021"
 path = "src/lib.rs"
 
 [build-dependencies]
-ts-rs = "10.1.0"
-tauri-build = { version = "^2", features = [] }
+ts-rs = "^10.1.0"
 
 [dependencies]
-ts-rs = "10.1.0"
-tauri = { version = "2.3.1", features = [] }
-tauri-plugin-opener = "^2"
-serde = { version = "^1", features = ["derive"] }
-serde_json = "^1"
+serde.workspace = true
+serde_json.workspace = true
+ts-rs = "^10.1.0"
+chrono = "0.4.40"
