--- a/src-server/Cargo.toml
+++ b/src-server/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "platform_server"
+name = "axum_server"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde.workspace = true
+serde_json.workspace = true
 platform_core = { path = "../platform_core" }
 axum = "^0.8.1"
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "^0.6.2", features = ["cors"] }
 tokio = { version = "1.44.1", features = ["full"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "^1.0.140"
+tracing = "^0.1.41"
+tracing-subscriber = "^0.3.19"
