--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-desktop-app"
+name = "tauri_app"
 version = "0.1.0"
 description = "Tauri Desktop App"
 authors = ["you"]
@@ -15,14 +15,10 @@ name = "tauri_app"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-ts-rs = "10.1.0"
 tauri-build = { version = "^2", features = [] }
 
 [dependencies]
 platform_core = { path = "../platform_core" }
-ts-rs = "10.1.0"
-tauri = { version = "2.3.1", features = [] }
+tauri = { version = "^2.3.1", features = [] }
 tauri-plugin-opener = "^2"
-serde = { version = "^1", features = ["derive"] }
-serde_json = "^1"
 
