--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 members = [
     "platform_core",
     "src-tauri",
@@ -6,7 +7,9 @@ members = [
 ]
 
 [workspace.dependencies]
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-
-resolver = "2"
+reqwest = {version = "^0.12.5", features = ["json"]}
+serde = { version = "^1.0.219", features = ["derive"] }
+serde_json = "^1.0.140"
+chrono = "^0.4.40"
+async-trait = "^0.1.88"
+zeroize = "^1.7"
