--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,11 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "^2", features = [] }
 
 [dependencies]
+serde.workspace = true
+serde_json.workspace = true
+chrono.workspace = true
+reqwest.workspace = true
+async-trait.workspace = true
 platform_core = { path = "../platform_core" }
 tauri = { version = "^2.3.1", features = [] }
 tauri-plugin-opener = "^2"
